change image on story

--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
               <div class="swiper-container bg-light" data-aos="fade-in">
                 <div class="swiper-wrapper" style="height: auto;">
                   <div class="swiper-slide">
-                    <img src="assets/images/PXL_20220114_223609150.jpg" alt="" class="img-fluid w-100" />
+                    <img src="assets/images/20250126_104645 (1).jpg" alt="" class="img-fluid w-100" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="assets/images/PXL_20220115_132834136.MP.jpg" alt="" class="img-fluid w-100" />
+                    <img src="assets/images/1752242572626_4x3.jpg" alt="" class="img-fluid w-100" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
