--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="turbo-visit-control" content="disable" />
+  <meta name="description" content="">
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="A'yun &amp; Yoga Wedding">
+
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:title" content="A'yun &amp; Yoga Wedding">
+  <meta name="twitter:description" content="">
+
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <meta name="twitter:image:src" content="">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="A'yun &amp; Yoga Wedding">
+  <meta property="og:image" content="">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="">
+  <meta property="og:site_name" content="A'yun &amp; Yoga Wedding">
+
+
 
   <!-- Place this data between the <head> tags of your website -->
   <title>A'yun &amp; Yoga Wedding</title>
@@ -14,6 +36,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/AY-removebg-preview_rose_gold.png" />
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="A'yun &amp; Yoga Wedding" />
+  <meta itemprop="description" content="">
+  <meta itemprop="image" content="">
 
   <script src="js/main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js"
